# cpp_ariel_assignments

./: CMakeLists.txt
Assignment_1/: PhoneticFinder.cpp
Assignment_2/: FamilyTree.cpp
Assignment_3/: solver.cpp  solver.hpp
Assignment_5_/: range.hpp
